--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="footer-column">
                 <h3 class="footer-title">Resources</h3>
                 <a href="https://geti2p.net/en/docs/how/intro" class="footer-link">I2P Wiki</a>
-                <a href="notnow.html class="footer-link">Config Tips</a>
+                <a href="notnow.html" class="footer-link">Config Tips</a>
                 <a href="notnow.html" class="footer-link">FAQ</a>
             </div>
             <div class="footer-column">
