--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <div class="header-container">
             <div class="logo">
                 <img src="128.png" alt="Specter Logo" class="logo-image">
-                <a href="index.html" class="logo-text">Specter</a>
+                <span class="logo-text">Specter</span>
             </div>
             <nav class="nav">
                 <a href="about.html" class="nav-link">About</a>
